--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://source.zoom.us/10.2.3/css/bootstrap.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://source.zoom.us/10.2.3/css/react-select.css"
+    />
     <title>React App</title>
   </head>
   <body>
